fixing container height on mobile view

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 #nameForm {
   margin-top: 30px;
   max-width: 100%;
-  max-height: 100%;
+  height: 80%;
 }
 
 label {
@@ -71,5 +71,8 @@ button:hover {
 @media only screen and (max-width: 767px) {
   .greeted {
     font-size: 12px;
+  }
+  #nameForm {
+    height: 80%;
   }
 }
